--- a/src/visualization/package.xml
+++ b/src/visualization/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>visualization_pkg</name>
+  <name>visualization</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="michielvangeene@gmail.com">ram-user</maintainer>
@@ -11,9 +11,8 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>rclcpp_components</depend>
-  <depend>opencv</depend>
-  <depend>cv_bridge</depend>
-  <depend>image_transport</depend>
+  <depend>sdl2</depend>
+
   
   <depend>builtin_interfaces</depend>
   <depend>rosidl_default_generators</depend>
